[package]
name        = "aw-fel"
version     = "0.5.2"
edition     = "2021"
authors     = ["Razican <razican@protonmail.ch>"]
license     = "MIT/Apache-2.0"
readme      = "README.md"
description = "Library for dealing with Allwinner devices in FEL mode, in pure Rust."
keywords    = ["arm", "sunxi", "allwinner", "fel"]
categories  = ["embedded"]

[dependencies]
rusb      = "0.9.4"
byteorder = "1.5.0"
anyhow    = "1.0.86"
thiserror = "1.0.63"

[features]
default = ["uboot"]
uboot   = []
